--- a/src/pages/notes/teams-meeting-combo.mdx
+++ b/src/pages/notes/teams-meeting-combo.mdx
@@ -18,7 +18,4 @@ You know, people dropping buzzword after buzzword, followed by other people also
 
 Just imagine a combo counter in the bottom right of these meetings; it would be a thing of beauty.
 
-<div style="width:100%;height:0;padding-bottom:56%;position:relative;">
-  <iframe src="https://giphy.com/embed/LOKyPMiZmgqhg1EOjQ" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
-</div>
-<p><a href="https://giphy.com/gifs/DaveandBusters-ddr-dave-and-busters-LOKyPMiZmgqhg1EOjQ">via GIPHY</a></p>
+![women in a beige suite closes file storage drawers in rapid succession. The word "Combo" is visible in the bottom middle of the image.](https://media2.giphy.com/media/LOKyPMiZmgqhg1EOjQ/giphy.gif?cid=790b761178f594f793bdb26113cf0e2091e6b5b267f74644&rid=giphy.gif&ct=g)
