fix: frontmatter for combo

--- a/src/pages/notes/teams-meeting-combo.mdx
+++ b/src/pages/notes/teams-meeting-combo.mdx
@@ -1,6 +1,6 @@
 ---
-title: Buzzword Combos
-description: Imagine if video calls had a combo counter for jargon.
+title: "Buzzword Combos"
+description: "Imagine if video calls had a combo counter for jargon."
 layout: '../../layouts/NoteLayout.astro'
 pubDate: 2022-09-23
 tags: ['thoughts']
