fix: unescaped characters

--- a/src/pages/notes/teams-meeting-combo.mdx
+++ b/src/pages/notes/teams-meeting-combo.mdx
@@ -11,7 +11,7 @@ You know, people dropping buzzword after buzzword, followed by other people also
 
 > I think that we can really get some team synergy (1x) on this, and develop a real value-add(2x) for our stakeholders through technocracy(3x). 
 
-> I couldn't agree more <insert-name>, This project will bring a level of hyperautomation(1x) that will enable massive value(2x) and hyper-growth(3x) in our content systems. 
+> I couldn't agree more *insert-name*, This project will bring a level of hyperautomation(1x) that will enable massive value(2x) and hyper-growth(3x) in our content systems. 
 > We will also be disrupting(4x) our internal process and pivoting(5x) into a cloud-native(6x) infrastructure. 
 
 *PERFECT COMBO*
